--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                                     <li>
                                         <div class="dw-user-box">
                                             <div class="u-img">
-                                                    <img src=https://res.cloudinary.com/gouniimages/image/upload/v1601023761/0e475e2a-b37a-4c35-b0f4-9e7777813f19.jpg width="20" alt="user">
+                                                    <img src="./images/profile.jpg" width="20" alt="user">
                                             
                                             </div>
                                             <div class="u-text">
-                                                <h4>TOCHUKWU </h4>
+                                                <h4>STEPHEN </h4>
                                                 <p class="text-muted"></p><a href="https://erp.gouni.edu.ng/Student/StudentDashboard/ViewStudentInfo" class="btn btn-rounded btn-danger btn-sm">View Profile</a>
                                             </div>
                                         </div>
@@ -302,7 +302,7 @@
 
 
                                             <div>
-                                                <p>Name:<strong>Ani TOCHUKWU  Stephen </strong><br></p>
+                                                <p>Name:<strong>Ani Stephen Tochukwu </strong><br></p>
                                                 <p>
                                                     Email: Anitochukwu2016@gmail.com
                                                     <br />
