--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <!-- User profile -->
                     <div class="user-profile" style="background: url(../../Content/image/user-info.jpg) no-repeat;">
                         <!-- User profile image -->
-                        <div class="profile-img">                                                     <img src=https://res.cloudinary.com/gouniimages/image/upload/v1601023761/0e475e2a-b37a-4c35-b0f4-9e7777813f19.jpg width="20" alt="user">
+                        <div class="profile-img">                                                     <img src=./images/profile.jpg width="20" alt="user">
  </div>
                         <!-- User profile text-->
                         <div class="profile-text">
